--- a/EventAura/src/Pages/EH/EHLogin.scss
+++ b/EventAura/src/Pages/EH/EHLogin.scss
@@ -110,5 +110,11 @@
     color: #000; 
   }
   
+  hr {
+    border: 0; 
+    height: 3px; 
+    background-color: black; 
+    margin: 2rem 0;
+  }
   
   
