--- a/EventAura/src/Pages/TB/TBLogin.scss
+++ b/EventAura/src/Pages/TB/TBLogin.scss
@@ -164,11 +164,11 @@ footer {
     margin: 20px auto;    
   }
   .custom-link {
-    color: #ffffff;            // Set text color to white
-    text-decoration: none;     // Remove underline
+    color: #ffffff;            
+    text-decoration: none;     
   }
   
   .custom-link:hover {
-    text-decoration: underline; // Optional: underline on hover
+    text-decoration: underline; 
   }
   
