--- a/EventAura/src/Pages/UserProfile/profile.scss
+++ b/EventAura/src/Pages/UserProfile/profile.scss
@@ -33,6 +33,8 @@
     height: 100px;
     border-radius: 50%;
     border: 2px solid #96E7F8;
+    display: block;
+    margin: 0 auto;
   }
   
   .profile-details {
