--- a/EventAura/src/Pages/EH/CreateEvent.scss
+++ b/EventAura/src/Pages/EH/CreateEvent.scss
@@ -254,6 +254,7 @@
       border-radius: 5px;
       margin-top: 1rem;
       transition: background-color 0.3s ease;
+      text-decoration: none;
     }
     
     .submit-btn:hover {
