--- a/EventAura/src/Pages/BrowseEvent/BrowseEvent.scss
+++ b/EventAura/src/Pages/BrowseEvent/BrowseEvent.scss
@@ -111,6 +111,19 @@ $text-white: #FFFFFF;
   cursor: default; 
   opacity: 0.7;  
 }
+
+.remaining-button{
+   display: inline-block; 
+  padding: 10px 20px; 
+  background-color: #007bff; 
+  color: #fff; 
+  border: none; 
+  border-radius: 5px; 
+  font-size: 16px; 
+  text-align: center;
+  cursor: default; 
+  opacity: 0.7;  
+}
 .card {
   height: 100%; /* maximum height */
   display: flex;
