--- a/EventAura/src/Pages/BrowseEvent/TBEventDetails.scss
+++ b/EventAura/src/Pages/BrowseEvent/TBEventDetails.scss
@@ -1,20 +1,11 @@
-/* General Styling */
-/*body {
-    font-family: Arial, sans-serif;
-  }
-  
-  /* Header */
-  /*header {
-    background-color: #000;
-    color: #fff;
-  }*/
+
   
   /* Event Details Section */
   .event-details {
     .banner {
       position: relative;
       height: 300px;
-      background-image: url('../../assets/BG-10.png');
+      /*background-image: url('../../assets/BG-10.png');*/
       background-size: cover;
       background-position: center;
       display: flex;
