--- a/EventAura/src/Pages/TB/TBLogin.scss
+++ b/EventAura/src/Pages/TB/TBLogin.scss
@@ -50,6 +50,13 @@ footer {
     text-align: right;
     margin-bottom: 1rem;
   }
+
+  .guest {
+    text-align: center;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    color: white;
+  }
   
   .TB-Login-overlay button {
     width: 100%;
