--- a/EventAura/src/Pages/CommonPages/ViewEvent/ViewEvent.scss
+++ b/EventAura/src/Pages/CommonPages/ViewEvent/ViewEvent.scss
@@ -24,7 +24,7 @@
   .info-section {
     margin: 20px;
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #deedee;
     border-radius: 8px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 
